CSS - All styling except mobile hamburger menu (and functionality)

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           <li><a href="#">Categories</a></li>
         </ul>
         <!-- MOBILE HAMBURGER ICON -->
-        <label class="hamburger-menu hidden-at-desktop">
+        <label class="hidden-at-desktop hamburger-menu">
           <input type="checkbox" />
         </label>
         <!-- MOBILE NAV -->
-        <aside class="hidden-at-desktop mobile-nav-container">
+        <aside class="hidden-at-desktop mobile-nav-container sidebar">
           <ul class="mobile-nav">
             <li><a href="#">Home</a></li>
             <li><a href="#">New</a></li>
