CSS - Hamburger menu and mobile sidebar implementation

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <title>Frontend Mentor | News homepage</title>
   </head>
   <body>
+    <!-- <div class="mobile-menu-overlay"></div> -->
     <header class="page-padding">
       <nav class="header">
         <!-- SITE LOGO -->
@@ -46,11 +47,11 @@
         <!-- MOBILE NAV -->
         <aside class="hidden-at-desktop mobile-nav-container sidebar">
           <ul class="mobile-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">New</a></li>
-            <li><a href="#">Popular</a></li>
-            <li><a href="#">Trending</a></li>
-            <li><a href="#">Categories</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">New</a></li>
+            <li><a href="">Popular</a></li>
+            <li><a href="">Trending</a></li>
+            <li><a href="">Categories</a></li>
           </ul>
         </aside>
       </nav>
