--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./styles.css" />
+    <!-- JAVASCRIPT -->
+    <script src="./script.js" defer></script>
 
     <title>Frontend Mentor | News homepage</title>
   </head>
@@ -41,12 +43,18 @@
           <li><a href="#">Categories</a></li>
         </ul>
         <!-- MOBILE HAMBURGER ICON -->
-        <label class="hidden-at-desktop hamburger-menu">
+        <label
+          id="hamburger-menu"
+          class="hidden-at-desktop hamburger-menu"
+          aria-controls="mobile-navigation"
+          aria-expanded="false"
+        >
+          <p class="sr-only">Menu</p>
           <input type="checkbox" />
         </label>
         <!-- MOBILE NAV -->
         <aside class="hidden-at-desktop mobile-nav-container sidebar">
-          <ul class="mobile-nav">
+          <ul id="mobile-navigation" class="mobile-nav">
             <li><a href="">Home</a></li>
             <li><a href="">New</a></li>
             <li><a href="">Popular</a></li>
